Fix tables on mobile size screens

--- a/src/stylesheets/content.less
+++ b/src/stylesheets/content.less
@@ -285,6 +285,10 @@ body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb {
   box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2);
 }
 @media (max-width: 1180px) {
+  #docs .content table th,
+  #docs .content table td {
+    color: @dark-gray;
+  }
   .content pre > code {
     background: @monokai-gray;
     border: solid 1px #e7eaee;
